--- a/numeron web/package.json
+++ b/numeron web/package.json
@@ -13,8 +13,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
+    "bootstrap": "^5.3.2",
     "expr-eval": "^2.0.2",
+    "mathjs": "^11.11.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
