--- a/numeron web/package.json
+++ b/numeron web/package.json
@@ -18,7 +18,8 @@
     "mathjs": "^11.11.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
