--- a/numeron web/package.json
+++ b/numeron web/package.json
@@ -16,9 +16,11 @@
     "bootstrap": "^5.3.2",
     "expr-eval": "^2.0.2",
     "mathjs": "^11.11.1",
+    "plotly.js-dist-min": "^2.26.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
