--- a/numeron web/package.json
+++ b/numeron web/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "expr-eval": "^2.0.2",
     "mathjs": "^11.11.1",
